DEX-24392 | fix: remove autocomplete from dropdown input to prevent overlapping

--- a/_src/blocks/phone-number-checker/phone-number-checker.css
+++ b/_src/blocks/phone-number-checker/phone-number-checker.css
@@ -165,11 +165,6 @@ main .section.phone-number-checker-container {
                     height: 20px;
                     object-fit: cover;
                     margin-right: 8px;
-
-                    &.search-icon {
-                        width: 40px;
-                        height: 30px;
-                    }
                 }               
             }
 
